fix table text align

--- a/public/style.css
+++ b/public/style.css
@@ -11,3 +11,7 @@
   max-height: 100%!important;
   overflow-y: inherit!important;
 }
+
+.table td, .table th {
+  vertical-align: middle!important;
+}
